Add syntactic sugar